--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
                 p.every(function (i) { return objectEquals(x[i], y[i]); });
         }        
         
-        const socket = new WebSocket('ws://' + location.host + '/api/v1/queries');
+        const socket = new WebSocket('wss://' + location.host + '/api/v1/queries');
         var prevQuery = {}
         
         socket.onmessage = function (event) {
