--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Flask Docker</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     
     <script language="javascript" type="text/javascript">
         
@@ -35,7 +35,7 @@
                 p.every(function (i) { return objectEquals(x[i], y[i]); });
         }        
         
-        const socket = new WebSocket('wss://' + location.host + '/api/v1/queries');
+        const socket = new WebSocket('ws://' + location.host + '/api/v1/queries');
         var prevQuery = {}
         
         socket.onmessage = function (event) {
@@ -44,7 +44,11 @@
 
             // update
             if (!objectEquals(prevQuery, query)) {
-                document.getElementById("myDIV").innerHTML += query.productName + "<br>";
+                document.getElementById("articleName").innerHTML = "<b>" + query.productName + "</b>";
+
+                var image = document.getElementById("articleImage");
+                image.src = query.imageUrl
+
                 prevQuery = query
             }
         }
@@ -52,13 +56,20 @@
 </head>
 <body>
 
-    <div class="grid" id="myDIV">
+    <div class="pure-g">
+        <h2>Waste Watcher</h2>
+        <img style="height: 50px" src="{{url_for('static', filename='ww_logo.png')}}" />
     </div>
+    
 
-    <h1>This is a Flask App containerised with Docker</h1>
-    <a>https://starhack-extra-prod-starhack-4zf1nw.mo2.mogenius.io/api/v1/getPayback</a>
-    <a>https://starhack-extra-prod-starhack-4zf1nw.mo2.mogenius.io/api/v1/echo</a>
-    <a>https://starhack-extra-prod-starhack-4zf1nw.mo2.mogenius.io/api/v1/getDB</a>
+    <div class="pure-g">
+        <div class="pure-u-1-3"></div>
+        <div class="pure-u-1-3" id="contentArea">
+            <p id="articleName"></p>
+            <p> <img style="height: 150px" id="articleImage"></p>
+        </div>
+        <div class="pure-u-1-3"><p></p></div>
+    </div>
 
 </body>
 </html>
