--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,20 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     
+    <style>
+        /*
+        When setting the primary font stack, apply it to the Pure grid units along
+        with "html", "button", "input", "select", and "textarea". Pure Grids use
+        specific font stacks to ensure the greatest OS/browser compatibility.
+        */
+        html, button, input, select, textarea,
+        .pure-g [class *= "pure-u"] {
+            /* Set your content font stack here: */
+            font-family: Georgia, Times, "Times New Roman", serif;
+        }
+    </style>
+
+
     <script language="javascript" type="text/javascript">
         
         function objectEquals(x, y) {
@@ -35,7 +49,7 @@
                 p.every(function (i) { return objectEquals(x[i], y[i]); });
         }        
         
-        const socket = new WebSocket('ws://' + location.host + '/api/v1/queries');
+        const socket = new WebSocket('wss://' + location.host + '/api/v1/queries');
         var prevQuery = {}
         
         socket.onmessage = function (event) {
