--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,7 +18,15 @@
             /* Set your content font stack here: */
             font-family: Georgia, Times, "Times New Roman", serif;
         }
-    </style>
+
+        .content {
+            border: 1px solid red;
+            box-shadow: 10px 5px 5px #ffd8d8;
+            border-radius: 20px;
+            padding: 10px;
+        }
+
+        </style>
 
 
     <script language="javascript" type="text/javascript">
@@ -63,6 +71,9 @@
                 var image = document.getElementById("articleImage");
                 image.src = query.imageUrl
 
+                document.getElementById("mhd").innerHTML = "<b>" + query.mhd + "</b>";
+                document.getElementById("payback").innerHTML = "<b>" + query.paybackPoints + "</b>";
+
                 prevQuery = query
             }
         }
@@ -71,16 +82,22 @@
 <body>
 
     <div class="pure-g">
-        <h2>Waste Watcher</h2>
-        <img style="height: 50px" src="{{url_for('static', filename='ww_logo.png')}}" />
+        <div class="pure-u-1-3"></div>
+        <div class="pure-u-1-3" class="content">            
+            <img style="height: 50px" src="{{url_for('static', filename='ww_logo.png')}}" />
+            <h2>Waste Watcher</h2>
+        </div>
+        <div class="pure-u-1-3"></div>
     </div>
     
 
     <div class="pure-g">
         <div class="pure-u-1-3"></div>
-        <div class="pure-u-1-3" id="contentArea">
+        <div class="pure-u-1-6" id="contentArea">
             <p id="articleName"></p>
-            <p> <img style="height: 150px" id="articleImage"></p>
+            <p style="text-align: center;"> <img style="height: 150px" id="articleImage"></p>
+            <p id="mhd"></p>
+            <p id="payback"></p>
         </div>
         <div class="pure-u-1-3"><p></p></div>
     </div>
