--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,11 +19,20 @@
             font-family: Georgia, Times, "Times New Roman", serif;
         }
 
-        .content {
+        #contentArea {
             border: 1px solid red;
             box-shadow: 10px 5px 5px #ffd8d8;
             border-radius: 20px;
             padding: 10px;
+            min-width: 25%; 
+        }
+
+        .success {
+            color: green;
+        }
+
+        .failure {
+            color: red;
         }
 
         </style>
@@ -57,7 +66,13 @@
                 p.every(function (i) { return objectEquals(x[i], y[i]); });
         }        
         
-        const socket = new WebSocket('wss://' + location.host + '/api/v1/queries');
+        var socket;
+        if (location.host == "localhost:5000") {
+            socket = new WebSocket('ws://' + location.host + '/api/v1/queries');
+        } else {
+            socket = new WebSocket('wss://' + location.host + '/api/v1/queries');
+        }
+        
         var prevQuery = {}
         
         socket.onmessage = function (event) {
@@ -71,21 +86,30 @@
                 var image = document.getElementById("articleImage");
                 image.src = query.imageUrl
 
-                document.getElementById("mhd").innerHTML = "<b>" + query.mhd + "</b>";
-                document.getElementById("payback").innerHTML = "<b>" + query.paybackPoints + "</b>";
+                document.getElementById("mhd").innerHTML = "<b> Best before: " + query.mhd + "</b>";
+
+                if (query.paybackPoints > 0) {
+                    document.getElementById("payback").innerHTML = "<b class='success'> Earned addtional Payback points: " + query.paybackPoints + "</b>";
+                } else {
+                    document.getElementById("payback").innerHTML = "<b class='failure'> No additional PayBack points for this product. Look out for another one!</b>";
+                }
 
                 prevQuery = query
             }
         }
     </script> 
 </head>
-<body>
+<body> 
+
+    <div class="pure-g">
+        <div class="pure-u-12"></div>
+    </div>
 
     <div class="pure-g">
         <div class="pure-u-1-3"></div>
-        <div class="pure-u-1-3" class="content">            
-            <img style="height: 50px" src="{{url_for('static', filename='ww_logo.png')}}" />
-            <h2>Waste Watcher</h2>
+        <div class="pure-u-1-3" class="content">
+            <img style="height: 50px; float: left; padding: 5px; margin: 5px;" src="{{url_for('static', filename='ww_logo.png')}}" />
+            <h2>Waste Watchers</h2>
         </div>
         <div class="pure-u-1-3"></div>
     </div>
@@ -93,9 +117,9 @@
 
     <div class="pure-g">
         <div class="pure-u-1-3"></div>
-        <div class="pure-u-1-6" id="contentArea">
-            <p id="articleName"></p>
-            <p style="text-align: center;"> <img style="height: 150px" id="articleImage"></p>
+        <div class="pure-u-1-4" id="contentArea">
+            <p id="articleName"><b>Backend ready, waiting for Scan</b></p>
+            <p style="text-align: center;"> <img style="height: 150px" id="articleImage" src="static/startscan.png"></p>
             <p id="mhd"></p>
             <p id="payback"></p>
         </div>
