--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,12 +19,21 @@
             font-family: Georgia, Times, "Times New Roman", serif;
         }
 
+        body {
+            background-color: #cc071e;
+        }
+
+        h1, h2, h3 {
+            color: white;
+        }
+
         #contentArea {
-            border: 1px solid red;
-            box-shadow: 10px 5px 5px #ffd8d8;
+            border: 1px solid white;
+            box-shadow: 10px 5px 5px #332424;
             border-radius: 20px;
             padding: 10px;
             min-width: 25%; 
+            background-color: white;
         }
 
         .success {
@@ -80,7 +89,9 @@
             query = JSON.parse(event.data)
 
             // update
-            if (!objectEquals(prevQuery, query)) {
+            if (Object.keys(query).length === 0) {
+                resetScan()
+            } else if (!objectEquals(prevQuery, query)) {
                 document.getElementById("articleName").innerHTML = "<b>" + query.productName + "</b>";
 
                 var image = document.getElementById("articleImage");
@@ -97,6 +108,32 @@
                 prevQuery = query
             }
         }
+
+        function resetScan() {
+            document.getElementById("payback").innerHTML = "";
+            document.getElementById("mhd").innerHTML = "";
+            document.getElementById("articleName").innerHTML = "<b>Backend ready, waiting for Scan</b>";
+            document.getElementById("articleImage").src = "static/startscan.png"
+                
+        }
+
+        function resetScanButton() {
+            
+            if (location.host == "localhost:5000") {
+                clearurl ='http://' + location.host + '/api/v1/clear';
+            } else {
+                clearurl = 'https://' + location.host + '/api/v1/clear';
+            }
+            httpGet(clearurl);
+        }
+
+        function httpGet(theUrl) {
+            var xmlHttp = new XMLHttpRequest();
+            xmlHttp.open( "GET", theUrl, false ); // false for synchronous request
+            xmlHttp.send( null );
+            return xmlHttp.responseText;
+        }
+
     </script> 
 </head>
 <body> 
@@ -107,7 +144,7 @@
 
     <div class="pure-g">
         <div class="pure-u-1-3"></div>
-        <div class="pure-u-1-3" class="content">
+        <div class="pure-u-1-3" class="content" onclick="resetScanButton()">
             <img style="height: 50px; float: left; padding: 5px; margin: 5px;" src="{{url_for('static', filename='ww_logo.png')}}" />
             <h2>Waste Watchers</h2>
         </div>
@@ -124,6 +161,7 @@
             <p id="payback"></p>
         </div>
         <div class="pure-u-1-3"><p></p></div>
+
     </div>
 
 </body>
